# hiperlab_gazebo

./: CMakeLists.txt  README.md  extra.txt  package.xml
include/: gazebo_mavlink_interface.h  gazebo_motor_plugin.h  gazebo_ros_interface.h
launch/: crazyflie.launch  iris.launch  rospy
models/crazyflie/: crazyflie.sdf  model.config
models/iris/: iris.sdf
models/rotors_description/meshes/: cf_prop0.STL  cf_prop1.STL  cf_prop2.STL  cf_prop3.STL  cf_quad_body.STL
msgs/: CMakeLists.txt  Imu.proto
scripts/: spawn_model.py
src/: gazebo_controller_interface.cpp  gazebo_imu_plugin.cpp  gazebo_mavlink_interface.cpp  gazebo_motor_model.cpp  gazebo_motor_plugin.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_ros_interface.cpp
worlds/: iris.world
